initial redesign agent server